<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".UniversityData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/univ_foto"
            android:layout_width="390dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/univ_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nama_universitas"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/kontak_uinversitas"
            android:textColor="@android:color/black"
            android:textSize="17sp" />


        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/kontak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Kontak       :"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Website     :"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Email          :"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/ig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Instagram  :"
                    android:textColor="@android:color/black" />
            </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/univ_kontak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/isi_kontak"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/univ_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/isi_website"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/univ_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/isi_email"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/univ_ig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/isi_ig"
                        android:textColor="@android:color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/alamat_univesitas"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/univ_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_alamat"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>